                       <rule filename="(?:http)*s*:*[/]{0,2}(?:www\.)*youtu(?:\.be/|be\.com/(?:embed/|watch/|v/|.*?[?&/]v=))[a-zA-Z0-9_\-]{11}.*" player="MPC-BE" />
                    </rules>
                </playercorefactory>
[fix] Reported background progress dialog percentage
[fix] Playlist items, use video_items instead of playback_items
[fix] search history size
[upd] Improve speed of playback starting and resolver
            before: min: 1.5s max: 2.6s median: 1.7s
            after:  min: 0.9s max: 2.6s median: 1.2s
[chg] refactor logging and system version
[chg] Localize confirmation
[lang] el_gr strings |contrib: twilight0|
[lang] es_es strings |contrib: roliverosc|
[lang] es_mx strings |contrib: Intel11|
[lang] it_it strings |contrib: SebastianoPistore|
[lang] nl_nl strings |contrib: Markman-B|

6.1.4
[fix] Signature function not found

6.1.3
[fix] timedelta.total_seconds python 2.6 compat.

6.1.2
[fix] dash settings check and defaults
[fix] addon-check raised warning for services complex entry point
[fix] codacy raised issue in http server (https://app.codacy.com/app/Kodi/repo-plugins/pullRequest?prid=2080401)
[chg] move seek to onPlayBackStarted, onAVStarted only in K18
[chg] geolocation provider changed from ipstack to ip-api
[del] frodo listitem art compatibility
[lang] ru_ru strings |contrib: Burgaduk|
[lang] zh_tw strings |contrib: Zankio|

6.1.1
[fix] http proxy using incorrect setting id causing 403 errors

6.1.0
[add] Multi-user support
    - Switch User folder (default: on) Settings -> Folders
    - User management (Add, Remove, Rename, Switch) Settings - Users
    - Signed in users are green, Current user has an *
[add/upd] add data cache and optimize caching
    - add Settings -> Maintenance -> Clear data cache/Delete data cache
    - increase allowed cache size
    - database accesses per 50 videos: before: 70~100 after: 4~6
    - load time of 50 videos w/ no cached videos: before: ~11.6 secs, after: ~3 secs